Clean: Add clean function to delete css prior to compile.

--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "browserlist": "^1.0.1",
     "foundation-sites": "^6.8.1",
     "gulp": "^5",
-    "gulp-sass": "^5.1.0",
     "jquery": "^3.7.1",
     "motion-ui": "^2.0.5",
     "what-input": "^5.2.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "clean-sweep": "^1.1.1",
     "gulp-mode": "^1.1.0",
     "gulp-postcss": "^10.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "sass-embedded": "^1.79.4"
   }
